refactor: change JdbcTemplate to JdbcClient in dao